samples/_failures_safe/1761194622_8492bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d6f4321.c: In function ‘main’:
./samples/SAFE/__tmp_2d6f4321.c:166:26: error: expected ‘]’ at end of input
  166 |     uint8_t test_data[500
      |                          ^
      |                          ]
./samples/SAFE/__tmp_2d6f4321.c:166:5: error: expected declaration or statement at end of input
  166 |     uint8_t test_data[500
      |     ^~~~~~~
